--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "codeinc/lib-servicemanager",
-  "version": "1.0.0",
+  "version": "1.1.0-dev",
   "description": "PHP service manager",
   "homepage": "https://github.com/CodeIncHQ/lib-servicemanager",
   "type": "library",
