--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "codeinc/lib-servicesmanager",
-  "version": "1.1.0-dev",
+  "name": "codeinc/servicesmanager",
+  "version": "1.0.1",
   "description": "PHP service manager",
-  "homepage": "https://github.com/CodeIncHQ/lib-servicesmanager",
+  "homepage": "https://github.com/CodeIncHQ/ServicesManager",
   "type": "library",
   "license": "MIT",
   "require": {
