--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "php": ">=7.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7"
+    "phpunit/phpunit": "^7",
+    "codeinc/error-renderer": "^1.2"
   },
   "autoload": {
     "psr-4": {"CodeInc\\ServicesManager\\": "src/"}
